[project]
name = "oort-python"
version = "0.6.0"
description = "Default template for PDM package"
authors = [
    {name = "Aryan Singh",email = "aquiveal@gmail.com"},
]
dependencies = ["boto3>=1.43.46", "pydantic>=2.13.4", "httpx>=0.28.1", "asgiref>=3.11.1", "worldline @ git+https://github.com/aurumorinc/worldline-python.git", "pydantic-settings>=2.14.2"]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}


[dependency-groups]
dev = [
    "bumpver>=2026.1132",
    "mkinit>=1.2.0",
    "ruff>=0.15.21",
    "pytest>=9.1.1",
    "moto>=5.2.2",
    "respx>=0.23.1",
    "pytest-asyncio>=1.4.0",
    "pyrefly>=1.1.1",
    "vcrpy>=8.3.0",
]

[tool.bumpver]
current_version = "0.6.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit = false
tag = false
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'version = "{version}"',
]
"src/oort/__init__.py" = [
    '__version__ = "{version}"',
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[tool.pyrefly]
project-includes = [
    "src/**/*.py",
]
project-excludes = [
    "references",
    "tests",
]

[tool.ruff]
exclude = [
    "references",
]

[tool.pdm]
distribution = true

